Fixed sign out from Profile page, added line breaks so username not covered in profile page

--- a/workouts/static/workouts/web/css/profilePage.css
+++ b/workouts/static/workouts/web/css/profilePage.css
@@ -36,3 +36,21 @@
 	background-color: white !important;
 
 }
+
+.jumbotron {
+padding-top: 60px !important!
+
+}
+body {
+  padding-top: 60px;
+}
+@media (max-width: 979px) {
+  body {
+    padding-top: 0px;
+  }
+.jumbotron {
+padding-top: 60px !important!
+
+}
+
+}
